stylesheet.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.4.14,
* Autoprefixer: v10.4.7
* Browsers: last 4 version
*/

@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');

/* Standard elements */
/* ----------------- */
body {
	margin: 0px 0px;
	padding:0px 0px;
	background-color: #46293F;
	display:-webkit-box;
	display:-ms-flexbox;
	display:flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	    -ms-flex-direction: column;
	        flex-direction: column;
	-ms-flex-line-pack: start;
	    align-content: flex-start;
	-webkit-box-pack:start;
	    -ms-flex-pack:start;
	        justify-content:flex-start;
	-webkit-column-gap: 0px;
	   -moz-column-gap: 0px;
	        column-gap: 0px;
	overflow-x: hidden;
}

h1 {
	font-family: 'Quicksand', sans-serif;
	font-size: calc(12px + 2vw);
	font-weight: 500;
	color: white;
}

h2 {
	font-family: 'Quicksand', sans-serif;
	font-size: calc(8px + 1.5min);
	font-weight: 100;
	color: white;
	text-align: center;
}

p {
	font-family: 'Quicksand', sans-serif;
	font-size: calc(12px + 1.5vmin);
	font-weight: 200;
	color: white;
}

a {
	font-family: 'Quicksand', sans-serif;
	font-size: calc(12px + 1.5vmin);
	font-weight: bold;
	color: #fbb954;
	-webkit-transition-duration: 0.2s;
	     -o-transition-duration: 0.2s;
	        transition-duration: 0.2s;
}

a:hover{
	color: #fb6b1d;
	-webkit-transition-duration: 0.3s;
	     -o-transition-duration: 0.3s;
	        transition-duration: 0.3s;
}

/* Hero img and wishlist button */
/* ---------------------------- */

/* Wishlist button */
#wishlistnow {
	top: 50%;
	margin-bottom: 20%;
	color: #fbb954;
	font-size: calc(20px + 3vmax);
	background: #fff;
	backdrop-filter: blur(5px);
	-webkit-backdrop-filter: blur(5px);
	padding: 1vmin;
	border-radius: 3vmin;
	font-family: 'Quicksand', sans-serif;
	font-weight: bold;
	border: 1.2vmin solid #46293F;
	filter: drop-shadow(1vmin 1vmin 0px #46293F);
	-webkit-filter: drop-shadow(1vmin 1vmin 0px #46293F);
	text-shadow: 3px 3px 1px #46293F;
	-webkit-transition-duration: 0.3s;
	     -o-transition-duration: 0.3s;
	        transition-duration: 0.3s;
	-webkit-transition-timing-function: cubic-bezier(.41,0,.3,1.5);
	     -o-transition-timing-function: cubic-bezier(.41,0,.3,1.5);
	        transition-timing-function: cubic-bezier(.41,0,.3,1.5);
	width: 75vw;
	-webkit-box-shadow: 5px 5px 1px #c7dcd0 inset;
	        box-shadow: 5px 5px 1px #c7dcd0 inset;
	font-weight:1000;
}

#wishlistnow:after{
	content: attr(data-default);
}

#wishlistnow:hover {
	filter: drop-shadow(0vw 0vw 0px #fbb954);
	-webkit-filter: drop-shadow(0vw 0vw 0px #fbb954);
	border: 0.7vmin solid #fbb954;
	color: #fbb954;
	-webkit-transition-duration: 0.4s;
	     -o-transition-duration: 0.4s;
	        transition-duration: 0.4s;
	-webkit-transition-timing-function: ease;
	     -o-transition-timing-function: ease;
	        transition-timing-function: ease;

}
#wishlistnow:hover:after {
	content:none !important;
	content:attr(data-hover)!important;
}
#wishlistnow:focus {
	filter: drop-shadow(0vmin 0vmin 0px #7f708a);
	-webkit-filter: drop-shadow(0vmin 0vmin 0px #7f708a);
	border: 1vmin solid #e83b3b;
	background: white;
	color: #e83b3b;
	text-shadow: 3px 3px 1px #46293F;
	-webkit-transition-duration: 0.5s;
	     -o-transition-duration: 0.5s;
	        transition-duration: 0.5s;
	-webkit-transition-timing-function: ease;
	     -o-transition-timing-function: ease;
	        transition-timing-function: ease;
}
#wishlistnow:focus:after {
content: attr(data-active) !important;
}

/* HeroImg */
#hero {
	background-image: url("assets/images/HeroImg.png");
	background-color: #46293F;
	background-repeat: no-repeat;
	height: 95vh;
	background-size: cover;
	background-attachment: fixed;
	background-position: center;
	color: red;
	text-align: center;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	display: -webkit-flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	margin-bottom: 0px;
	padding-bottom: 0px;
}
	
/* Bottom logo */
/* --------- */
#bothorizontal {
	-ms-transform-origin: top center;
	    transform-origin: top center;
	-webkit-transform-origin: top center;
	height: -webkit-fit-content;
	height: -moz-fit-content;
	height: fit-content;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	    -ms-flex-direction: column;
	        flex-direction: column;
	-webkit-box-pack: start;
	    -ms-flex-pack: start;
	        justify-content: flex-start;
	position: relative;
	-ms-transform: translate(0,-20vw);
	    transform: translate(0,-20vw);
	-webkit-transform: translate(0,-20vw);
	margin-bottom: 0px;
	padding-bottom: 0px;
	height: 20vmax;
}

#botlogo {
	position: relative;
	height: 248.45vw;
	width: 75vw;
	padding-right: 12.5vw;
	padding-left: 12.5vw;
	margin-left: auto;
	margin-right: auto;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	    -ms-flex-direction: column;
	        flex-direction: column;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	z-index: -1000;
	margin-bottom: 0px;
	padding-bottom: 0px;

}

#cutlogo {
	position: absolute;
	background-color: #46293F;
	height: 10vw;
	width: 100vw;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	bottom: 0;
	z-index:1001;


}
#logo {
	z-index:1002;
	height: 248.45vw;
}
/* Bottom content */
/* --------- */
#bottom {
	position: relative;
	top:-15vw;
	margin-top: 0px;
	padding-top: 0px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: space-evenly;
	    -ms-flex-pack: space-evenly;
	        justify-content: space-evenly;
	-ms-flex-line-pack: start;
	    align-content: flex-start;	
	-webkit-box-orient: horizontal;	
	-webkit-box-direction: normal;	
	    -ms-flex-direction: row;	
	        flex-direction: row;
		-ms-flex-wrap: wrap;
		    flex-wrap: wrap;
		white-space: nowrap;
}

.horizontalcontent {
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	    -ms-flex-direction: column;
	        flex-direction: column;
	padding-left: 15px;
	padding-right: 15px;

}

#footer{
	position: relative;
    top:-5vw;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	    -ms-flex-direction: row;
	        flex-direction: row;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	margin-bottom: 3vmin;
}

/* Scrollbar */
/* --------- */
/* width */
::-webkit-scrollbar {
  width: 15px;
}
/* Track */
::-webkit-scrollbar-track {
  background: #694f62;
  border-style: none;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #46293F;
  border-color: #46293F;
  border-width: 2px;
  border-style: none;
  border-top-style: solid;
  border-bottom-style: solid;
  border-radius: 20px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #fbb954;
  border-color: #fbb954;
}

